--- a/_pages/my_cv.html
+++ b/_pages/my_cv.html
@@ -23,7 +23,7 @@ author_profile: true
         Updated on: 07/07/2023
     </div>
 
-    <iframe id="pdf-display" src="/files/OToragay_CV.pdf" width="100%" height="600px" frameborder="0"></iframe>
+    <iframe id="pdf-display" src="/files/PooyanRahmanzadeh_CV.pdf" width="100%" height="600px" frameborder="0"></iframe>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/markdown-it/12.0.4/markdown-it.min.js"></script>
     <script>
