--- a/_pages/my_cv.html
+++ b/_pages/my_cv.html
@@ -19,9 +19,9 @@ author_profile: true
     </style>
 </head>
 <body>
-    <div id="markdown-content">
+    <!-- <div id="markdown-content">
         Updated on: 07/07/2023
-    </div>
+    </div> -->
 
     <iframe id="pdf-display" src="/files/PooyanRahmanzadeh_CV.pdf" width="100%" height="600px" frameborder="0"></iframe>
 
